apps/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperless-ngx
  ports:
    - port: 80
      targetPort: 8000
      name: http
